# co-forget-protocol

./: .env.example  README.md  co-forget-protocol.py  pyproject.toml  requirements.txt  setup.py
exp/: co-forget-protocol.py
src/co_forget_protocol/: __init__.py  agents.py  config.py  main.py  memory.py  pbft.proto  pbft.py  pinecone.py  tools.py  voting.py
tests/: test_protocol.py
